sintacticoBison.output
Terminals unused in grammar

   COMA
   OTHER


Gramática

    0 $accept: prog $end

    1 $@1: /* vacío */

    2 $@2: /* vacío */

    3 prog: INICIO $@1 sentencias $@2 FIN

    4 sentencias: sentencias sentencia
    5           | sentencia

    6 sentencia: ENTERO ID PUNTO
    7          | ENTERO ID ASIGNACION NUMERO PUNTO
    8          | ID ASIGNACION expresion PUNTO
    9          | ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   10          | ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   11          | ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO PUNTO
   12          | ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO PUNTO
   13          | MOSTRAREDAD PARENTESISIZQUIERDO ID PUNTO PARENTESISDERECHO PUNTO

   14 expresion: primaria
   15          | expresion SUMA primaria
   16          | expresion RESTA primaria

   17 primaria: ID
   18         | NUMERO
   19         | PARENTESISIZQUIERDO expresion PARENTESISDERECHO


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ASIGNACION (258) 7 8 9 10 11 12
PUNTO (259) 6 7 8 9 10 11 12 13
SUMA (260) 15
RESTA (261) 16
PARENTESISIZQUIERDO (262) 9 10 11 12 13 19
PARENTESISDERECHO (263) 9 10 11 12 13 19
COMA (264)
OTHER (265)
ID (266) 6 7 8 9 10 11 12 13 17
NUMERO (267) 7 9 10 18
CALCULARFECHA (268) 9 11
CALCULAREDAD (269) 10 12
MOSTRAREDAD (270) 13
INICIO (271) 3
FIN (272) 3
ENTERO (273) 6 7 9 10 11 12


No terminales con las reglas donde aparecen

$accept (19)
    en la izquierda: 0
prog (20)
    en la izquierda: 3, en la derecha: 0
$@1 (21)
    en la izquierda: 1, en la derecha: 3
$@2 (22)
    en la izquierda: 2, en la derecha: 3
sentencias (23)
    en la izquierda: 4 5, en la derecha: 3 4
sentencia (24)
    en la izquierda: 6 7 8 9 10 11 12 13, en la derecha: 4 5
expresion (25)
    en la izquierda: 14 15 16, en la derecha: 8 15 16 19
primaria (26)
    en la izquierda: 17 18 19, en la derecha: 14 15 16


estado 0

    0 $accept: . prog $end

    INICIO  desplazar e ir al estado 1

    prog  ir al estado 2


estado 1

    3 prog: INICIO . $@1 sentencias $@2 FIN

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 3


estado 2

    0 $accept: prog . $end

    $end  desplazar e ir al estado 4


estado 3

    3 prog: INICIO $@1 . sentencias $@2 FIN

    ID           desplazar e ir al estado 5
    MOSTRAREDAD  desplazar e ir al estado 6
    ENTERO       desplazar e ir al estado 7

    sentencias  ir al estado 8
    sentencia   ir al estado 9


estado 4

    0 $accept: prog $end .

    $default  aceptar


estado 5

    8 sentencia: ID . ASIGNACION expresion PUNTO

    ASIGNACION  desplazar e ir al estado 10


estado 6

   13 sentencia: MOSTRAREDAD . PARENTESISIZQUIERDO ID PUNTO PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 11


estado 7

    6 sentencia: ENTERO . ID PUNTO
    7          | ENTERO . ID ASIGNACION NUMERO PUNTO
    9          | ENTERO . ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   10          | ENTERO . ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   11          | ENTERO . ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO PUNTO
   12          | ENTERO . ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 12


estado 8

    3 prog: INICIO $@1 sentencias . $@2 FIN
    4 sentencias: sentencias . sentencia

    ID           desplazar e ir al estado 5
    MOSTRAREDAD  desplazar e ir al estado 6
    ENTERO       desplazar e ir al estado 7

    $default  reduce usando la regla 2 ($@2)

    $@2        ir al estado 13
    sentencia  ir al estado 14


estado 9

    5 sentencias: sentencia .

    $default  reduce usando la regla 5 (sentencias)


estado 10

    8 sentencia: ID ASIGNACION . expresion PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 15
    ID                   desplazar e ir al estado 16
    NUMERO               desplazar e ir al estado 17

    expresion  ir al estado 18
    primaria   ir al estado 19


estado 11

   13 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO . ID PUNTO PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 20


estado 12

    6 sentencia: ENTERO ID . PUNTO
    7          | ENTERO ID . ASIGNACION NUMERO PUNTO
    9          | ENTERO ID . ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   10          | ENTERO ID . ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   11          | ENTERO ID . ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO PUNTO
   12          | ENTERO ID . ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO PUNTO

    ASIGNACION  desplazar e ir al estado 21
    PUNTO       desplazar e ir al estado 22


estado 13

    3 prog: INICIO $@1 sentencias $@2 . FIN

    FIN  desplazar e ir al estado 23


estado 14

    4 sentencias: sentencias sentencia .

    $default  reduce usando la regla 4 (sentencias)


estado 15

   19 primaria: PARENTESISIZQUIERDO . expresion PARENTESISDERECHO

    PARENTESISIZQUIERDO  desplazar e ir al estado 15
    ID                   desplazar e ir al estado 16
    NUMERO               desplazar e ir al estado 17

    expresion  ir al estado 24
    primaria   ir al estado 19


estado 16

   17 primaria: ID .

    $default  reduce usando la regla 17 (primaria)


estado 17

   18 primaria: NUMERO .

    $default  reduce usando la regla 18 (primaria)


estado 18

    8 sentencia: ID ASIGNACION expresion . PUNTO
   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria

    PUNTO  desplazar e ir al estado 25
    SUMA   desplazar e ir al estado 26
    RESTA  desplazar e ir al estado 27


estado 19

   14 expresion: primaria .

    $default  reduce usando la regla 14 (expresion)


estado 20

   13 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID . PUNTO PARENTESISDERECHO PUNTO

    PUNTO  desplazar e ir al estado 28


estado 21

    7 sentencia: ENTERO ID ASIGNACION . NUMERO PUNTO
    9          | ENTERO ID ASIGNACION . CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   10          | ENTERO ID ASIGNACION . CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   11          | ENTERO ID ASIGNACION . CALCULARFECHA PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO PUNTO
   12          | ENTERO ID ASIGNACION . CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO PUNTO

    NUMERO         desplazar e ir al estado 29
    CALCULARFECHA  desplazar e ir al estado 30
    CALCULAREDAD   desplazar e ir al estado 31


estado 22

    6 sentencia: ENTERO ID PUNTO .

    $default  reduce usando la regla 6 (sentencia)


estado 23

    3 prog: INICIO $@1 sentencias $@2 FIN .

    $default  reduce usando la regla 3 (prog)


estado 24

   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria
   19 primaria: PARENTESISIZQUIERDO expresion . PARENTESISDERECHO

    SUMA               desplazar e ir al estado 26
    RESTA              desplazar e ir al estado 27
    PARENTESISDERECHO  desplazar e ir al estado 32


estado 25

    8 sentencia: ID ASIGNACION expresion PUNTO .

    $default  reduce usando la regla 8 (sentencia)


estado 26

   15 expresion: expresion SUMA . primaria

    PARENTESISIZQUIERDO  desplazar e ir al estado 15
    ID                   desplazar e ir al estado 16
    NUMERO               desplazar e ir al estado 17

    primaria  ir al estado 33


estado 27

   16 expresion: expresion RESTA . primaria

    PARENTESISIZQUIERDO  desplazar e ir al estado 15
    ID                   desplazar e ir al estado 16
    NUMERO               desplazar e ir al estado 17

    primaria  ir al estado 34


estado 28

   13 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID PUNTO . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 35


estado 29

    7 sentencia: ENTERO ID ASIGNACION NUMERO . PUNTO

    PUNTO  desplazar e ir al estado 36


estado 30

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA . PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   11          | ENTERO ID ASIGNACION CALCULARFECHA . PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 37


estado 31

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD . PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   12          | ENTERO ID ASIGNACION CALCULAREDAD . PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO PUNTO

    PARENTESISIZQUIERDO  desplazar e ir al estado 38


estado 32

   19 primaria: PARENTESISIZQUIERDO expresion PARENTESISDERECHO .

    $default  reduce usando la regla 19 (primaria)


estado 33

   15 expresion: expresion SUMA primaria .

    $default  reduce usando la regla 15 (expresion)


estado 34

   16 expresion: expresion RESTA primaria .

    $default  reduce usando la regla 16 (expresion)


estado 35

   13 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID PUNTO PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 39


estado 36

    7 sentencia: ENTERO ID ASIGNACION NUMERO PUNTO .

    $default  reduce usando la regla 7 (sentencia)


estado 37

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO . NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   11          | ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO . ID ID ID PARENTESISDERECHO PUNTO

    ID      desplazar e ir al estado 40
    NUMERO  desplazar e ir al estado 41


estado 38

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO . NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO
   12          | ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO . ID ID PUNTO PARENTESISDERECHO PUNTO

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43


estado 39

   13 sentencia: MOSTRAREDAD PARENTESISIZQUIERDO ID PUNTO PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 13 (sentencia)


estado 40

   11 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID . ID ID PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 44


estado 41

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO . NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO

    NUMERO  desplazar e ir al estado 45


estado 42

   12 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID . ID PUNTO PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 46


estado 43

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO . NUMERO PUNTO PARENTESISDERECHO PUNTO

    NUMERO  desplazar e ir al estado 47


estado 44

   11 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID . ID PARENTESISDERECHO PUNTO

    ID  desplazar e ir al estado 48


estado 45

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO . NUMERO PUNTO PARENTESISDERECHO PUNTO

    NUMERO  desplazar e ir al estado 49


estado 46

   12 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID . PUNTO PARENTESISDERECHO PUNTO

    PUNTO  desplazar e ir al estado 50


estado 47

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO . PUNTO PARENTESISDERECHO PUNTO

    PUNTO  desplazar e ir al estado 51


estado 48

   11 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID ID . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 52


estado 49

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO . PUNTO PARENTESISDERECHO PUNTO

    PUNTO  desplazar e ir al estado 53


estado 50

   12 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 54


estado 51

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 55


estado 52

   11 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 56


estado 53

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO . PARENTESISDERECHO PUNTO

    PARENTESISDERECHO  desplazar e ir al estado 57


estado 54

   12 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 58


estado 55

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 59


estado 56

   11 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO ID ID ID PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 11 (sentencia)


estado 57

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO . PUNTO

    PUNTO  desplazar e ir al estado 60


estado 58

   12 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO ID ID PUNTO PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 12 (sentencia)


estado 59

   10 sentencia: ENTERO ID ASIGNACION CALCULAREDAD PARENTESISIZQUIERDO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 10 (sentencia)


estado 60

    9 sentencia: ENTERO ID ASIGNACION CALCULARFECHA PARENTESISIZQUIERDO NUMERO NUMERO NUMERO PUNTO PARENTESISDERECHO PUNTO .

    $default  reduce usando la regla 9 (sentencia)
